2002-08-28  Alexander V. Lukyanov <lav@yars.free.net>

	* OutputJob.cc: don't create LocalAccess directly (it breaks modularity).
	* OutputJob.cc: check if output_fd really has an error.

2002-08-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, FileAccess.cc: fixed core dump when Content-Disposition
	  is handled (suggested_filename was not properly initialized).
	* Speedometer.cc: fix eta rounding (reported by Igor Zhbanov
	  <bsg@uniyar.ac.ru>).

2002-08-07  Glenn Maynard <g_ld@zewt.org>

	* lftp_tinfo.cc: use extern "C".

2002-08-06  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: resume job in Fg.

2002-08-06  Glenn Maynard <g_ld@zewt.org>

	* commands.cc: disallow 0 as queue position.

2002-08-05  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h: split off terminfo stuff.
	* lftp_tinfo.cc, lftp_tinfo.h: new files.
	* StatusLine.cc: use new header lftp_tinfo.h.
	* Makefile.am: add new files.

2002-08-02  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: include termios.h for solaris 9.

2002-08-02  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: append source basename to target if target ends with
	  a slash.

2002-08-01  Alexander V. Lukyanov <lav@yars.free.net>

	* url.cc: allow a path in slot pseudo-url.

2002-07-31  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: do cd on source session first to check
	  if the directory exists. This fixes creation of directory if source
	  dir does not exist.

2002-07-31  Ayamura KIKUCHI <ayamura@ayamura.org>

	* misc.cc: <curses.h> should be included before <term.h> on IRIX.

2002-07-31  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, commands.cc: allow per-slot queues;
	  support queue start/stop; rename has_queue to queue_feeder.
	* CopyJob.cc, CopyJob.h, FileSetOutput.cc, FileSetOutput.h, FindJob.cc,
	  FindJob.h, Job.cc, Job.h, MirrorJob.cc, MirrorJob.h, QueueFeeder.cc,