@@ -36,7 +36,11 @@ class OutputJob : public Job
    /* CopyJob that sends to the output.  (output may be equal to input) */
    CopyJob *output;
 
-   FDStream *output_fd;
+   Buffer *tmp_buf;	// to store data while !initialized
+   FDStream *output_fd;	// to initialize CopyJobs
+   FileAccess *fa;
+   char *fa_path;
+   bool fa_reuse;
 
    bool initialized;
 
