@@ -2,6 +2,9 @@
 
 	* OutputJob.cc: don't create LocalAccess directly (it breaks modularity).
 	* OutputJob.cc: check if output_fd really has an error.
+	* FileCopy.cc: allow FileCopyPeer to be broken, but not done.
+	* OutputJob.cc: create a temporary buffer if InitCopy don't succeed
+	  at first (temporary error); prepare for pipe() tmp error handling.
 
 2002-08-09  Alexander V. Lukyanov <lav@yars.free.net>
 
